--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 .debug>header {
-    height: 100px;
+    height: 130px;
     background-color: violet;
 }
 
@@ -55,7 +55,11 @@ body {
 }
 
 .intro {
+    width: 100%;
+    height: 440px;
     margin: 1rem 0 1rem;
+    background-image: url(./img/banner.jpg);
+    background-position: center;
 }
 
 .leadership {
