--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 }
 
 .debug .intro {
-    height: 300px;
+    height: 400px;
     background-color: yellow;
 }
 
@@ -57,9 +57,22 @@ body {
 .intro {
     width: 100%;
     height: 440px;
-    margin: 1rem 0 1rem;
+    margin: 2rem 0 1rem;
     background-image: url(./img/banner.jpg);
     background-position: center;
+    border-radius: .5rem;
+    padding-top: 300px;
+    padding-left: 3rem;
+    filter: brightness(0.9);
+}
+
+.introtext {
+    width: 380px;
+    color: white;
+}
+
+.introtext p {
+    font-size: 11px;
 }
 
 .leadership {
