--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
 .intro {
     width: 100%;
     height: 440px;
-    margin: 2rem 0 1rem;
+    margin: 2rem 0 2rem;
     background-image: url(./img/banner.jpg);
     background-position: center;
     border-radius: .5rem;
@@ -111,4 +111,14 @@ footer {
 .nav {
     color: gray;
     margin-right: .5rem;
+}
+
+.leadership>p {
+    color: gray;
+}
+
+.leadership>h2{
+    font-size: 36px;
+    font-weight: 900;
+    font-weight: bold;
 }
