--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 /* debug system */
 .debug>.content {
-    height: 940px;
+    height: 1000px;
 }
 
 .debug>header {
@@ -49,8 +49,7 @@
 /* style content */
 
 body {
-    padding-left: 10%;
-    padding-right: 10%;
+    margin: 0 15%;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -98,7 +97,8 @@ body {
 }
 
 footer {
-    margin-top: .5rem;
+    margin-top: 3rem;
+    text-align: center;
 }
 
 .logo {
@@ -121,4 +121,41 @@ footer {
     font-size: 36px;
     font-weight: 900;
     font-weight: bold;
+}
+
+.picsx {
+    border-radius: 1rem;
+    width: 100%;
+    height: 150px;
+    background-image: url(./img/img-1.jpg);
+    background-position: center;
+}
+
+.picdx {
+    border-radius: 1rem;
+    width: 100%;
+    height: 150px;
+    background-image: url(./img/img-3.jpg);
+    background-position: center;
+}
+
+.picmaincontent {
+    border-radius: 1rem;
+    width: 100%;
+    height: 150px;
+    background-image: url(./img/banner-2.jpg);
+    background-position: center;
+}
+
+.columns {
+    margin-top: 2rem;
+}
+
+h4 {
+    font-weight: bolder;
+    margin: 1rem 0 1rem;
+}
+
+.cuore {
+    color: red;
 }
